--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 ﻿{
     "name": "bitdog-client",
-    "version": "0.0.20",
+    "version": "0.0.21",
     "description": "Monitor and control your IoT devices.",
     "main": "./lib/bitdog.js",
-    "keywords": "iot raspberry pi arduino yun edison things robot automation sensor motor controller servo camera johnny-five",
+    "keywords": "iot raspberry pi arduino yun edison things robot automation sensor motor controller servo camera johnny-five weaved",
     "author": {
         "name": "Bitdog LLC",
         "email": "vjm@bitdog.io"
