Final changes to message schema

--- a/bin/config.json
+++ b/bin/config.json
@@ -1,5 +1,5 @@
 {
-  "auth_key": "d2bb241e-9045-4afb-b66a-24fc6e180060",
+  "auth_key": "",
   "logging": {
     "log_messages": true,
     "log_connection_events": false,
