Adding changes for multiple hub endpoints

--- a/bin/config.json
+++ b/bin/config.json
@@ -1,10 +1,10 @@
 {
   "auth_key": "",
   "logging": {
-    "log_messages": true,
+    "log_messages": false,
     "log_connection_events": true,
-    "log_process_events": true,
-    "log_suppress_logo": true
+    "log_process_events": false,
+    "log_suppress_logo": false
   },
   "webadmin": {
     "enable": true,
