Added application name to schema.  Changed layout of load averages.

--- a/package.json
+++ b/package.json
@@ -26,24 +26,24 @@
     "bitdog": "./bin/bitdog"
   },
   "dependencies": {
-    "body-parser": "^1.14.2",
-    "client-sessions": "^0.7.0",
-    "commander": "^2.9.0",
-    "cookie-parser": "^1.4.1",
-    "debug": "^2.2.0",
-    "ejs-locals": "^1.0.2",
-    "express": "^4.13.4",
-    "getmac": "^1.0.7",
-    "jsr-pattern": "^0.2.3",
-    "moment": "^2.11.1",
-    "morgan": "^1.6.1",
-    "native-password-hash": "^1.1.0",
-    "nconf": "^0.7.2",
-    "node-uuid": "^1.4.7",
-    "portchecker": "^0.1.2",
-    "serve-favicon": "^2.3.0",
-    "signalr-client": "0.0.16",
-    "stylus": "^0.50.0",
-    "temp": "^0.8.3"
+    "body-parser": ">=1.14.2",
+    "client-sessions": ">=0.7.0",
+    "commander": ">=2.9.0",
+    "cookie-parser": ">=1.4.1",
+    "debug": ">=2.2.0",
+    "ejs-locals": ">=1.0.2",
+    "express": ">=4.13.4",
+    "getmac": ">=1.0.7",
+    "jsr-pattern": ">=0.2.3",
+    "moment": ">=2.11.1",
+    "morgan": ">=1.6.1",
+    "native-password-hash": ">=1.1.0",
+    "nconf": "^0.8.3",
+    "node-uuid": ">=1.4.7",
+    "portchecker": ">=0.1.2",
+    "serve-favicon": ">=2.3.0",
+    "signalr-client": ">=0.0.16",
+    "stylus": "^0.53.0",
+    "temp": ">=0.8.3"
   }
 }
