--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bitdog-client",
-  "version": "0.0.47",
+  "version": "0.0.49",
   "description": "Monitor and control your IoT devices.",
   "main": "./lib/bitdog.js",
   "keywords": "iot raspberry pi arduino yun edison things robot automation sensor motor controller servo camera johnny-five weaved",
@@ -33,7 +33,7 @@
     "native-password-hash": "^1.1.0",
     "nconf": "^0.8.4",
     "node-uuid": "^1.4.7",
-    "signalr-client": "0.0.16",
-    "temp": "^0.8.3"
+    "temp": "^0.8.3",
+    "signalr-client-forked": "0.0.17"
   }
 }
