Added socket aborted event.

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "native-password-hash": "^1.1.0",
     "nconf": "^0.8.4",
     "node-uuid": "^1.4.7",
-    "temp": "^0.8.3",
-    "signalr-client-forked": "^0.0.18"
+    "signalr-client-forked": "0.0.20",
+    "temp": "^0.8.3"
   }
 }
