--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "commander": "^2.9.0",
     "getmac": "^1.0.7",
     "jsr-pattern": "^0.2.3",
+    "logrotate-stream": "^0.2.5",
     "moment": "^2.13.0",
     "native-password-hash": "^1.1.0",
     "nconf": "^0.8.4",
