--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "bitdog-client",
-  "version": "0.0.56",
+  "version": "0.0.57",
   "description": "Monitor and control your IoT devices.",
   "main": "./lib/bitdog.js",
-  "keywords": "iot raspberry pi arduino yun edison things robot automation sensor motor controller servo camera johnny-five weaved",
+  "keywords": "iot raspberrypi zwave robot automation sensor motor controller servo camera johnny-five weaved",
   "author": {
     "name": "Bitdog LLC",
     "email": "vjm@bitdog.io"
   },
   "license": "GPL-3.0",
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=4.2.1"
   },
   "repository": {
     "type": "git",
@@ -33,7 +33,7 @@
     "moment": "^2.13.0",
     "nconf": "^0.8.4",
     "node-uuid": "^1.4.7",
-    "signalr-client-forked": "0.0.20",
+    "signalr-client-forked": "^0.0.20",
     "temp": "^0.8.3"
   }
 }
